07/29 Firebase SignIn Success

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">Mokathon</string>
 
-
+    <!--
+    <string name="default_web_client_id">
+        587604470952-5nf3d82t09nbqg68tqmtic6j1c14ro69.apps.googleusercontent.com </string>
+        -->
 </resources>
