--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="edit">수정</string>
     <string name="delete">삭제</string>
     <string name="chatbot_greeting">대화를 시작해보세요!</string>
+    <string name="like_icon_description">좋아요 버튼</string>
+    <string name="comment_icon_description">댓글 버튼</string>
     <!--
     <string name="default_web_client_id">
         587604470952-5nf3d82t09nbqg68tqmtic6j1c14ro69.apps.googleusercontent.com </string>
