09/12 Logo and Name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Mokathon</string>
+    <string name="app_name">Noogoo</string>
     <!--커뮤니티 -->
     <string name="community">커뮤니티</string>
     <string name="latest">최신순</string>
