--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,90 @@
     <string name="default_web_client_id">
         587604470952-5nf3d82t09nbqg68tqmtic6j1c14ro69.apps.googleusercontent.com </string>
         -->
+    <string name="privacy_policy_text">
+        QuadCore(이하 \'회사\')는 정보통신망 이용촉진 및 정보보호 등에 관한 법률, 개인정보보호법 등 관련 법령상의 개인정보보호 규정을 준수하며,
+        관련 법령에 의거한 개인정보 처리방침을 정하여 이용자 권익 보호에 최선을 다하고 있습니다.\n\n
+        본 개인정보 처리방침은 \'누구(Noogoo)\' 애플리케이션 서비스(이하 \'서비스\')에 적용됩니다.\n\n
+        제1조 (개인정보의 수집 항목 및 이용 목적)\n회사는 서비스 제공을 위해 필요한 최소한의 범위 내에서 다음과 같이 개인정보를 수집하고 이용합니다.\n
+        - 커뮤니티: 게시글, 댓글, \'좋아요\' 기록\n
+        ㅤㅤ게시글 및 댓글 작성, 수정, 삭제 기능 제공, 사용자 활동(내가 쓴 글, 공감한 글) 조회 기능 제공, 원활한 커뮤니티 운영 및 관리\n
+        - 챗봇 기능: 대화 내용(질의 및 응답 기록)\n
+        ㅤㅤGemini AI 모델을 통한 실시간 상담 및 정보 제공, 서비스 개선 및 사용자 문의 응대\n
+        - AI 음성 분석: 음성 파일 및 변환된 텍스트 데이터\n
+        ㅤㅤ보이스피싱 여부 판단을 위한 AI 모델 분석, 분석 결과(판단, 확신도) 제공\n
+        - 서비스 공통: 서비스 이용 기록, 기기 정보\n
+        ㅤㅤ서비스 품질 개선 및 이용 환경 분석, 부정 이용 방지 및 사용자 보호\n
+        [수집 방법]\n
+        이용자가 커뮤니티, 챗봇, 음성 분석 기능을 이용하는 과정에서 직접 입력하거나 파일을 업로드하는 경우\n
+        서비스 이용 과정에서 자동으로 생성되어 수집되는 경우\n\n
+        제2조 (개인정보의 제3자 제공)\n회사는 원활한 서비스 제공을 위해 다음과 같이 개인정보 처리 업무를 외부 전문 업체에 위탁하여 운영하고 있습니다.\n
+        - 제공받는 자: Google(Firebase, Google Cloud, Gemini API)\n
+        - 제공 목적: 커뮤니티 데이터 저장 및 실시간 동기화, 챗봇 기능 제공, AI 음성 분석 서버 운영\n
+        - 제공하는 개인정보: 게시글, 댓글, 좋아요 기록, 대화 내용, 음성 파일 및 변환된 텍스트\n
+        - 보유 및 이용기간: 서비스 탈퇴 또는 위탁 계약 종료 시까지\n\n
+        - 제공받는 자: NAVER Cloud Platform(CLOVA Speech API)\n
+        - 제공 목적: 음성 파일의 텍스트 변환(STT)\n
+        - 제공하는 개인정보: 음성 파일\n
+        - 보유 및 이용기간: 텍스트 변환 목적 달성 후 즉시 파기\n
+        회사는 이용자의 개인정보를 명시한 범위 내에서만 처리하며, 이용자의 사전 동의 없이는 원칙적으로 제3자에게 제공하지 않습니다.\n\n
+        제3조 (개인정보의 보유 기간 및 파기)\n
+        1. 보유 기간: 이용자의 개인정보는 원칙적으로 서비스 회원 탈퇴 시까지 보유 및 이용됩니다.\n
+        2. 정보의 파기: 음성 파일 및 텍스트 변환 데이터는 AI 음성 분석 목적이 달성된 후, 서버에서 즉시 파기하는 것을 원칙으로 합니다.\n
+        챗봇 대화 기록은 이용자가 앱 내 \'채팅 기록 삭제\' 기능을 통해 언제든지 직접 파기할 수 있습니다.\n
+        전자적 파일 형태의 정보는 기록을 재생할 수 없는 기술적 방법을 사용하여 삭제합니다.\n\n
+        제4조 (이용자의 권리 및 행사 방법)\n
+        1. 이용자는 언제든지 등록되어 있는 자신의 게시글, 댓글 등을 앱 내 기능(\'내가 쓴 글\', \'공감한 글\' 등)을 통해 조회하거나 수정·삭제할 수 있습니다.\n
+        2. 회원 탈퇴를 통해 개인정보의 수집 및 이용 동의를 철회할 수 있습니다.\n
+        3. 개인정보 처리와 관련한 불만이나 문의사항은 제5조에 기재된 연락처로 문의하시면 지체 없이 조치하겠습니다.\n\n
+        제5조 (개인정보 보호책임자 및 문의)\n
+        회사는 이용자의 개인정보를 보호하고 관련 불만을 처리하기 위해 아래와 같이 개인정보 보호책임자를 지정하고 있습니다.\n
+        개발팀: Quadcore\n
+        문의: kwanwoo2005@knu.ac.kr\n\n
+        제6조 (개인정보 처리방침의 변경)\n
+        본 개인정보 처리방침의 내용 추가, 삭제 및 수정이 있을 경우, 개정 최소 7일 전에 서비스 내 공지사항을 통해 고지할 것입니다.\n
+        공고일자: 2025년 9월 15일\n
+        시행일자: 2025년 9월 15일
+    </string>
+    <string name="term_of_use_text">
+        제1조 (목적)\n
+        이 약관은 Quadcore(이하 \'회사\')가 제공하는 \'누구(Noogoo)\' 애플리케이션(이하 \'서비스\')의 이용과 관련하여
+        회사와 회원 간의 권리, 의무 및 책임사항 등을 규정함을 목적으로 합니다.\n\n
+        제2조 (용어의 정의)\n
+        회원: 이 약관에 동의하고 서비스를 이용하는 자를 말합니다.\n
+        게시물: 회원이 서비스 내에 게시한 글, 사진, 각종 파일과 링크 등을 의미합니다.\n
+        서비스: 회사가 제공하는 커뮤니티, 챗봇, AI 음성 분석 등 \'누구(Noogoo)\' 앱을 통해 이용 가능한 모든 기능을 의미합니다.\n\n
+        제3조 (약관의 효력 및 변경)\n
+        1. 이 약관은 서비스를 이용하고자 하는 모든 회원에 대하여 그 효력을 발생합니다.\n
+        2. 회사는 필요한 경우 관련 법령을 위배하지 않는 범위에서 이 약관을 개정할 수 있습니다.\n
+        3. 약관이 개정될 경우, 회사는 적용일자 7일 전부터 앱 내 공지를 통해 회원에게 알립니다.\n\n
+        제4조 (서비스의 제공 및 변경)\n
+        1. 회사는 다음과 같은 서비스를 제공합니다.\n
+        - 커뮤니티 서비스: 게시글 작성, 수정, 삭제, 조회, 댓글, 좋아요 등의 기능\n
+        - 챗봇 서비스: Gemini AI 모델을 통한 실시간 상담 및 정보 제공\n
+        - AI 음성 분석 서비스: 음성 파일을 이용한 보이스피싱 가능성 분석 및 결과 제공\n
+        2. 회사는 서비스의 내용, 운영상 또는 기술상의 필요에 따라 제공하고 있는 서비스의 전부 또는 일부를 변경할 수 있습니다.\n\n
+        제5조 (회원의 의무)\n
+        1. 회원은 다음 각 호에 해당하는 행위를 하여서는 안 됩니다.\n
+        - 타인의 정보를 도용하는 행위\n
+        - 불법적이거나 타인의 권리를 침해하는 게시물을 작성하는 행위\n
+        - 서비스 운영을 고의로 방해하는 행위\n
+        - 음성 분석 서비스에 타인의 음성을 무단으로 사용하는 행위\n
+        2. 회원은 관계 법령, 이 약관의 규정, 이용안내 및 서비스와 관련하여 공지한 주의사항,
+        회사가 통지하는 사항 등을 준수하여야 하며, 기타 회사의 업무에 방해되는 행위를 하여서는 안 됩니다.\n\n
+        제6조 (게시물의 저작권 및 관리)\n
+        1. 회원이 서비스 내에 작성한 게시물의 저작권은 해당 회원에게 귀속됩니다.\n
+        2. 회사는 회원이 작성한 게시물이 법령에 위반되거나 서비스 정책에 어긋나는 경우, 사전 통지 없이 삭제하거나 비공개 조치할 수 있습니다.\n\n
+        제7조 (서비스 이용의 제한)\n
+        회사는 회원이 이 약관의 의무를 위반하거나 서비스의 정상적인 운영을 방해한 경우, 서비스 이용을 경고, 일시정지, 영구이용정지 등으로 단계적으로 제한할 수 있습니다.\n\n
+        제8조 (면책조항)\n
+        1. AI 음성 분석 및 챗봇이 제공하는 정보는 사용자의 판단을 돕기 위한 참고 자료이며, 회사는 그 내용의 완전성이나 정확성을 보증하지 않습니다.
+        사용자는 제공된 정보를 바탕으로 한 최종적인 판단과 결정에 대해 스스로 책임져야 합니다.\n
+        2. 회사는 천재지변 또는 이에 준하는 불가항력으로 인하여 서비스를 제공할 수 없는 경우에는 서비스 제공에 관한 책임이 면제됩니다.\n
+        3. 회사는 회원의 귀책사유로 인한 서비스 이용의 장애에 대하여는 책임을 지지 않습니다.\n\n
+        제9조 (준거법 및 재판관할)\n
+        1. 회사와 회원 간 제기된 소송은 대한민국법을 준거법으로 합니다.\n
+        2. 회사와 회원 간 발생한 분쟁에 관한 소송은 민사소송법상의 관할법원에 제소합니다.\n\n
+        부칙\n
+        이 약관은 2025년 9월 15일부터 시행됩니다.
+    </string>
 </resources>
