--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,4 +119,7 @@
         부칙\n
         이 약관은 2025년 9월 15일부터 시행됩니다.
     </string>
+    <string name="landigpage_term">
+        계속하게 되면, 개인정보 처리방침 및\n이용약관에 동의하게 돼요.
+    </string>
 </resources>
